tests/testthat/fixtures/parse-errors/error.Rmd
---
title: "Parse Errors"
output: html_document
---

This is not executable R code:

``` r
library(dplyr

a <- 1 + 1
```

But this is:

```{r}
# C1: this should give a parse error
library(dplyr

a <- 1 + 1
```


